--- a/org/getting-started-with-org-mode.org
+++ b/org/getting-started-with-org-mode.org
@@ -77,3 +77,19 @@ output html
 * LaTeX integration
 
 - Characters: \alpha \rightarrow
+
+\begin{minted}[mathescape,
+               linenos,
+               numbersep=5pt,
+               gobble=2,
+               frame=lines,
+               framesep=2mm]{csharp}
+string title = "This is a Unicode p in the sky"
+/*
+Defined as $\pi=\lim_{n\to\infty}\frac{P_n}{d}$ where $P$ is the perimeter
+of an $n$-sided regular polygon circumscribing a
+circle of diameter $d$.
+*/
+const double pi = 3.1415926535
+\end{minted}
+
