Install flx fuzzy matching, better for projectile

--- a/configuration.org
+++ b/configuration.org
@@ -186,9 +186,20 @@
 #+BEGIN_SRC emacs-lisp
 (load-library "view")
 (require 'cc-mode)
-(require 'ido)
+;; (require 'ido)
 (require 'compile)
-(ido-mode t)
+;; (ido-mode t)
+#+END_SRC
+
+** Flx Fuzzy Matching
+#+BEGIN_SRC emacs-lisp
+(require 'flx-ido)
+(ido-mode 1)
+(ido-everywhere 1)
+(flx-ido-mode 1)
+;; disable ido faces to see flx highlights.
+(setq ido-enable-flex-matching t)
+(setq ido-use-faces nil)
 #+END_SRC
 
 ** Editing (some definitions are in editing_defuns.el)
