--- a/configuration.org
+++ b/configuration.org
@@ -1,7 +1,7 @@
 * Emacs Configuration
 ** Toggle debug messages
 #+BEGIN_SRC emacs-lisp
-(setq debug-on-error t)
+;; (setq debug-on-error t)
 #+END_SRC
 
 ** Turn off mouse interface early in startup to avoid momentary display
