--- a/configuration.org
+++ b/configuration.org
@@ -203,25 +203,14 @@
 (ido-mode 1)
 (ido-everywhere 1)
 (flx-ido-mode 1)
+
 ;; disable ido faces to see flx highlights.
 (setq ido-enable-flex-matching t)
 (setq ido-use-faces nil)
 #+END_SRC
 
-** Auto-complete Config
+** Jedi auto-complete
 #+BEGIN_SRC emacs-lisp
-(require 'auto-complete-config)
-(ac-config-default)
-#+END_SRC
-
-*** Jedi auto-complete
-#+BEGIN_SRC emacs-lisp
-(require 'jedi)
-;; Hook up to autocomplete
-(add-to-list 'ac-sources 'ac-source-jedi-direct)
-;; Enable for python-mode
-(add-hook 'python-mode-hook 'jedi:setup)
-(eval-after-load 'jedi '(require 'setup-jedi))
 #+END_SRC
 
 ** Editing (some definitions are in editing_defuns.el)
@@ -234,5 +223,3 @@
 (add-hook 'window-setup-hook 'post-load-stuff t)
 #+END_SRC
 
-** After init hook for package init
-*** Ensures that packages and dependencies are installed before package init
