--- a/configuration.org
+++ b/configuration.org
@@ -45,6 +45,13 @@
       (expand-file-name "site-lisp" user-emacs-directory))
 #+END_SRC
 
+** Ipython site-lisp dir
+#+BEGIN_SRC emacs-lisp
+(setq ein-site-lisp-dir
+      (concat site-lisp-dir
+        (convert-standard-filename "/emacs-ipython-notebook/lisp")))
+#+END_SRC
+
 ** Settings
 #+BEGIN_SRC emacs-lisp
 (setq settings-dir
@@ -80,6 +87,7 @@
 #+BEGIN_SRC emacs-lisp
 (add-to-list 'load-path settings-dir)
 (add-to-list 'load-path site-lisp-dir)
+(add-to-list 'load-path ein-site-lisp-dir)
 #+END_SRC
 
 ** Add external projects to load path
@@ -212,6 +220,19 @@
 ** Jedi auto-complete
 #+BEGIN_SRC emacs-lisp
 (require 'jedi-starter)
+#+END_SRC
+
+
+** Emacs iPython Notebooks!
+#+BEGIN_SRC emacs-lisp
+(require 'ein)
+(require 'ein-loaddefs)
+(require 'ein-notebook)
+(require 'ein-subpackages)
+;; Omit a bunch of key chord prefix typing
+(setq ein:use-smartrep t)
+;; Use jedi autocomplete backend
+(setq ein:completion-backend 'ein:use-ac-jedi-backend)
 #+END_SRC
 
 ** Editing (some definitions are in editing_defuns.el)
