--- a/configuration.org
+++ b/configuration.org
@@ -206,6 +206,11 @@
 (eval-after-load 'markdown-mode '(require 'setup-markdown-mode))
 #+END_SRC
 
+** Pandoc
+#+BEGIN_SRC emacs-lisp
+(add-hook 'markdown-mode-hook 'pandoc-mode)
+#+END_SRC
+
 ** A smattering of sanity
 #+BEGIN_SRC emacs-lisp
 (require 'sane-defaults)
