Install dired-details

--- a/configuration.org
+++ b/configuration.org
@@ -107,7 +107,7 @@
 #+END_SRC
 
 
-** Add external project submodules to load path
+** Add external project submodules (site-lisp) to load path
 #+BEGIN_SRC emacs-lisp
 (dolist (project (directory-files site-lisp-dir t "\\w+"))
   (when (file-directory-p project)
@@ -231,6 +231,7 @@
 (require 'ox-twbs)            ; Bootstrap compatible HTML Back-End for Org
 (require 'command-log-mode)   ; log keyboard commands to buffer
 (require 'wgrep)              ; wgrep allows you to edit a grep buffer and apply those changes to the file buffer
+(require 'dired-details+)     ; show and hide directory detail information
 #+END_SRC
 
 
